FINALLY FIXED STRETCHED ANIM and other stuff

--- a/style.css
+++ b/style.css
@@ -89,7 +89,6 @@ b, h2{
 
 /*navbar*/
 .navbar{
-    z-index: 100;
     width: 100%;
 }
 .navbar-nav-scroll{
@@ -139,14 +138,8 @@ b, h2{
     background: #04110B;
     border-radius: 4px;
     width: 100%;
-    opacity: 1;
     left: 0;
-    transform: rotate(0deg);
     transition: .25s ease-in-out;
-}
-
-.middle-bar {
-    margin-top: 0px;
 }
 
 /* when navigation is clicked */
@@ -158,7 +151,6 @@ b, h2{
 
 .navbar-toggler .middle-bar {
     opacity: 0;
-    filter: alpha(opacity=0);
 }
 
 .navbar-toggler .bottom-bar {
@@ -175,7 +167,6 @@ b, h2{
 
 .navbar-toggler.collapsed .middle-bar {
     opacity: 1;
-    filter: alpha(opacity=100);
 }
 
 .navbar-toggler.collapsed .bottom-bar {
@@ -183,11 +174,6 @@ b, h2{
     transform: rotate(0deg);
 }
 
-/* Color of 3 lines */
-
-.navbar-toggler.collapsed .toggler-icon {
-    background: #04110B;
-}
 .no-scroll {
     margin: 0;
     height: 100%;
@@ -223,7 +209,6 @@ b, h2{
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: auto;
     border-top: none !important;
 }
 .wrapper-home #footer{
@@ -270,11 +255,6 @@ b, h2{
 }
 
 /* Swiper */
-.swiper-home {
-    width: 100vw;
-    height: 100vh;
-    padding: 0 !important;
-}
 .wrapper-home{
     height: 100vh;
 }
@@ -285,14 +265,8 @@ b, h2{
     height: 1rem;
 }
 .wrapper-home .swiper-slide {
-    background: white;
-    width: 100%;
-    height: 100% !important;
     display: grid;
     position: relative;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 
 .scroll{
@@ -534,7 +508,7 @@ b, h2{
 }
 .card-mob{
     border-bottom-left-radius: 0px !important;
-    height: auto;
+
     margin-bottom: 3vw;
 }
 .card-mob .card-body{
@@ -749,6 +723,7 @@ a .card{
 .swiper-slide {
     background-position: center;
     background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .swiper-coverflow{
@@ -859,6 +834,9 @@ strong{
     .plus-link, .minus-link{
         width: 4.313rem;
     }
+    .badge{
+        width: 12.125rem;
+    }
 }
 
 @media screen and (min-width: 768px){
@@ -938,9 +916,6 @@ strong{
         grid-column-end: 1;
         justify-self: center;
         align-self: center;
-    }
-    .badge{
-        width: 12.125rem;
     }
     .icon-experience{
         width: 1.814rem;
